--- a/website/style.css
+++ b/website/style.css
@@ -106,7 +106,6 @@ h2 {
 h3 {
   padding: 0.2ex 0.2em;
   margin: 1ex 0em 0ex 2em;
-  border-top: 1px solid #ccc;
 }
 h4 {
   padding: 0.2ex 0.2em;
@@ -121,7 +120,8 @@ p {
 pre {
   padding: 0.4ex 0.4em 0.4ex 1em;
   margin: 1ex 2em 0ex 4em;
-  background-color: #ddf
+  background-color: #ddf;
+  font-weight: bold;
 }
 
 dl {
