--- a/website/style.css
+++ b/website/style.css
@@ -61,7 +61,7 @@ a img {
   border: 0px;
 }
 
-#navtab {
+.navtab {
   color: #333;
   margin: 1ex auto;
   padding-bottom: 0ex;
@@ -69,7 +69,7 @@ a img {
   text-align: center;
 }
 
-#navtab a {
+.navtab a {
   border: 4px solid #ccc;
   border-radius: 4px;
   background-color: #ccc;
